# DevOps-Course-Starter

./: .dockerignore  .env  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  class_practice.py  docker-compose.yml  env.j2  main.tf  my-ansible-inventory.ini  my-ansible-playbook.YAML  outputs.tf  pyproject.toml  requirements.txt  testcosmos.py  todoapp.service  variables.tf
.github/workflows/: my-ci-pipeline.yml
todo_app/: app.py  flask_config.py
todo_app/data/: mongo_items.py  todoitem.py  trello_items.py  user.py  viewmodel.py
todo_app/templates/: index.html
todo_app/test/: test_app.py  test_db.py  test_viewmodel.py
todo_app/tests_e2e/: test_e2e.py
